# thinkingsystem

./: .gitignore  CONTRIBUTING.md  COPYRIGHT  Cargo.toml  Demonstrations.md  Makefile  Manifest0.md  Thinking System - White Paper.md  deny.toml  rustfmt.toml  typos.toml
crates/estel/: Cargo.toml  README.md  backlog.md  build_python.sh 
crates/estel/python_helpers/: renderer.py  test_renderer.py
crates/estel/src/: api_graph.rs  chart_matcher.rs  data_profiler.rs  error.rs  learned_scorer.rs  lib.rs
crates/estel/src/data_handler/: column.rs  common.rs  dataframe.rs  engine.rs  io.rs  mod.rs  pipeline.rs  transformation.rs
crates/estel/src/intent/: api.rs  core.rs
crates/estel/src/symbolic_filtering/: data_structures.rs  enhanced_features.rs  enhanced_symbolic.rs  feature_graph.rs  field_analysis.rs  mod.rs  model_graph.rs  models.rs  optimiser.rs  symbolic.rs  symbolic_graph.rs  training.rs  utils.rs
crates/llm-contracts/: Cargo.toml
crates/llm-contracts/src/: config.rs  lib.rs  requests.rs  responses.rs  types.rs
crates/sleet/: Cargo.toml  README.md
crates/sleet/src/: ast.rs  flows.rs  lib.rs  logging.rs  transpiler.rs
crates/sleet/src/agents/: capabilities.rs  generator.rs  mod.rs  registry.rs  schemas.rs
crates/sleet/src/llm/: collaboration.rs  collaboration_workflows.rs  manager.rs  mod.rs  processor.rs  progress.rs  prompts.rs  unified_adapter.rs  utils.rs  validation.rs
crates/sleet/src/orchestration/: context_manager.rs  coordinator.rs  event_system.rs  flow_scheduler.rs  mod.rs  session_manager.rs
crates/sleet/src/orchestration/adapters/: agent_adapter.rs  llm_adapter.rs  mod.rs  task_adapter.rs  workflow_adapter.rs
crates/sleet/src/orchestration/resource_manager/: mod.rs  (+4 more)
crates/sleet/src/runtime/: assembler.rs  interpreter.rs  mod.rs  profiler.rs  vm.rs
crates/sleet/src/tasks/: analysis.rs  flow_loader.rs  mod.rs  schemas.rs  task_system.rs
crates/sleet/src/workflows/: mod.rs  planning_session.rs  team_generation.rs
crates/sleet/tests/: jit_integration.rs  jit_test.rs  llm_utils_tests.rs  performance_benchmark.rs  task_analysis_tests.rs
crates/steel/: Cargo.toml  LICENSE  libdatabase.rlib
crates/steel/config/messaging/: security_config.toml
crates/steel/src/: lib.rs
crates/steel/src/data_exchange/: data_bridging.rs  error.rs  exchange_adapters.rs  exchange_core.rs  exchange_graphql.rs  exchange_interfaces.rs  exchange_quic.rs  mod.rs  network_optimisation.rs
crates/steel/src/iam/: core.rs  crypto.rs  error.rs  jwt.rs  mod.rs  vc.rs
crates/steel/src/llm/: mod.rs  security.rs
crates/steel/src/messaging/: client.rs  database.rs  management.rs  mod.rs  network.rs  pathfinding.rs  platforms.rs  schema.json  schema.surql  types.rs
crates/steel/src/policy/: ast.rs  engine.rs  mod.rs  parser.rs  policy_loader.rs
crates/steel/tests/: circuit_breaker_tests.rs  connection_pool_tests.rs  exchange_graphql_tests.rs  iam_crypto_tests.rs  identity_provider_tests.rs  policy_ast_tests.rs  policy_engine_tests.rs  policy_loader_tests.rs  policy_parser_tests.rs  quic_provider.rs  quic_provider_concurrency.rs  quic_provider_concurrency_threshold.rs  quic_provider_concurrency_threshold_uni.rs  quic_provider_malformed.rs  quic_provider_uni.rs
crates/stele/: Cargo.toml
crates/stele/benches/: pipeline_vs_monolithic.rs
crates/stele/src/: kg_service.rs  lib.rs
crates/stele/src/blocks/: base.rs  factory.rs  mod.rs  registry.rs  rules.rs
crates/stele/src/builders/: batch.rs  mod.rs  node.rs  query.rs  relationship.rs
crates/stele/src/codegen/: artifacts.rs  mod.rs  plan_artifacts.rs  rust_clean.rs  rust_guard.rs  wat_pipeline.rs  wat_sanitize.rs
crates/stele/src/database/: README.md  connection.rs  data_interpreter.rs  data_processor.rs  diff.rs  dynamic_access.rs  dynamic_query_generator.rs  dynamic_storage.rs  health_monitor.rs  intent_analyser.rs  knowledge_adapter.rs  mod.rs  operations.rs  prompt_builder.rs  query_builder.rs  query_generator.rs  query_kg.rs  query_metrics.rs  query_router.rs  query_validator.rs  regulariser.rs  sanitize.rs  schema_analyser.rs  structured_store.rs  surreal_token.rs  types.rs
crates/stele/src/flows/: core.rs  engine.rs  engine_metrics_atomic.rs  factory.rs  flowgorithm.rs  llm_prompt_service.rs  mod.rs  security.rs  state.rs  state_experimental.rs  state_metrics.rs
crates/stele/src/graphs/: mod.rs
crates/stele/src/llm/: core.rs  dynamic_selector.rs  mod.rs  unified_adapter.rs
crates/stele/src/memory/: core.rs  decision_making.rs  enhanced_memory.rs  memory_components.rs  mod.rs  neural_models.rs  persistence.rs
crates/stele/src/nlu/: database_interface.rs  input_segmentation.rs  llm_processor.rs  mod.rs  utils.rs
crates/stele/src/policy/: anomaly.rs  backpressure.rs  mod.rs
crates/stele/src/provenance/: context.rs  dag.rs  mod.rs
crates/stele/src/relationships/: hybrid.rs  metrics.rs  mod.rs
crates/stele/src/scribes/: base_scribe.rs  discourse.rs  mod.rs  replay_buffer.rs  types.rs
crates/stele/src/util/: mod.rs  normalizer.rs
crates/stele/tests/: assembly_tests.rs  batch_api_v2.rs  builder_parity.rs  builder_performance_smoke.rs  canonical_visibility.rs  dynamic_executor_tests.rs  dynamic_function_tests.rs  dynamic_rust_cdylib_tests.rs  enhanced_memory_tests.rs  graph_integration_tests.rs  hybrid_relationship_basic.rs  hybrid_relationship_visibility_diag.rs  hybrid_relationship_visibility_new_conn.rs  hybrid_relationship_visibility_schemaless.rs  knowledge_extensibility_tests.rs  math_function_test.rs  math_syntax_test.rs  memory_persistence_tests.rs  memory_tests.rs  neural_models_tests.rs  persistence_tests.rs  provenance_dag_mvp.rs  provenance_diagnostics.rs  provenance_isolation.rs  provenance_sampling.rs  provenance_scheduling_integration.rs  provenance_storage.rs  query_builder_sanitizer_tests.rs  relationship_live_select_visibility.rs  relationship_minimal_repro.rs  relationship_node_direct_repro.rs  relationship_node_direct_repro_mem.rs  relationship_node_schemaless_control.rs  relationship_node_visibility_probes.rs  security_tests.rs.disabled  surreal_engine_info.rs
(+217 files in other folders)
