# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "sleet"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Core system dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
log.workspace = true
rand.workspace = true
md5.workspace = true

# Async runtime
async-trait.workspace = true
futures.workspace = true

# WebAssembly and JIT (for integration with HAL)
wasmtime.workspace = true
wat.workspace = true

# JIT compilation
cranelift = "0.122.0"
cranelift-jit = "0.122.0"
cranelift-module = "0.122.0"
cranelift-codegen = "0.122.0"# Networking
reqwest.workspace = true

# Data structures
fxhash.workspace = true

# Utilities
dotenvy.workspace = true

# Internal dependencies
stele = { path = "../stele" }
steel = { path = "../steel" }
llm-contracts = { path = "../llm-contracts" }
