# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "steel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
# Option A feature stratification
# full (default): includes all functionality including surrealdb-backed IAM & messaging database
# fabric_min: minimal surface (no surrealdb / database heavy deps) for NIF demo builds
# surrealdb feature gates the database-specific modules
# existing features retained (gtr, rustler, http-server)

default = ["full"]
full = ["surrealdb"]
fabric_min = []
# Database enabling feature
surrealdb = ["dep:surrealdb"]

# Existing features
gtr = ["rustler"]
rustler = ["dep:rustler"]
http-server = []

[dependencies]
# Workspace crates
llm-contracts = { path = "../llm-contracts" }

# Core system dependencies
tokio = { workspace = true, features = ["fs"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
dashmap.workspace = true

# Async runtime
async-trait.workspace = true
futures.workspace = true

# Networking
reqwest.workspace = true
axum.workspace = true
iroh.workspace = true

# Messaging dependencies
aes-gcm.workspace = true
regex.workspace = true

# Database (optional under surrealdb feature)
surrealdb = { workspace = true, optional = true }

# JWT
jsonwebtoken.workspace = true

# Cryptographic dependencies
ed25519-dalek.workspace = true
sha2.workspace = true
sha3.workspace = true
blake3.workspace = true
ring.workspace = true
p256.workspace = true
k256.workspace = true
base64.workspace = true
hex.workspace = true
zeroize.workspace = true
rand.workspace = true

# GTR system dependencies
rustler = { workspace = true, optional = true }

# Data structures
petgraph.workspace = true

# Data exchange dependencies
tonic.workspace = true
neo4rs.workspace = true
rdkafka.workspace = true
paho-mqtt.workspace = true
futures-core.workspace = true
pin-project-lite.workspace = true
tokio-stream.workspace = true
lru = "0.16"

# Performance and utilities
rayon.workspace = true
lazy_static.workspace = true

# GLiNER NER dependencies
gline-rs = "1.0.0"
orp = "0.9.2"
itertools = "0.14.0"

[dev-dependencies]
tempfile = "3.20"
anyhow = "1.0.98"
